# project_commander

./: Cargo.toml  README.md  default.nix  flake.nix
src/: app.rs  configuration.rs  event.rs  files.rs  git.rs  lib.rs  main.rs  tui.rs  ui.rs
src/cli/: args.rs
src/terminal_ui/: app.rs  event.rs  tui.rs  ui.rs  update.rs
src/terminal_ui/app/: project.rs
src/tui/: app.rs  event.rs  tui.rs  ui.rs  update.rs
src/tui/app/: project.rs
