[package]
name = "project_commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.25.0", features = ["all-widgets"]}
crossterm = "0.27"
anyhow = "1.0"
color-eyre = "0.6"
git2 = "0.18"
humantime = "2.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"]}
shellexpand = "3.1"
fuse-rust = "0.3"
